# glare

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  README.md  valgrind.supp
cmake/: buildconfig.cmake  tests.cmake
doc/doxygen/: styles.css
include/: gl_tables.hpp
include/glare/: abstract_logger.hpp  camera.hpp  fps_camera.hpp  freefly_camera_controller.hpp  hdr_renderer.hpp  logger_interface.hpp  null_logger.hpp  points.hpp  sizes.hpp  skybox.hpp
include/glare/input/: keyboard_event.hpp  mouse_button_event.hpp  mouse_move_event.hpp  mouse_scroll_event.hpp
include/glare/material/: color_utils.hpp  ktx_loader.hpp  material.hpp  texture.hpp  texture_library.hpp  texture_library_interface.hpp  texture_loader.hpp
include/glare/model/: mesh.hpp  model.hpp  model_loader.hpp
include/glare/opengl/: buffer.hpp  context.hpp  extensions.hpp  framebuffer.hpp  renderbuffer.hpp  shader.hpp  shader_program.hpp  texture.hpp  vertex_array.hpp
include/glare/platform/: file_watcher_interface.hpp
include/glare/platform/linux/: inotify_watcher.hpp
include/glare/primitive/: axis.hpp  unit_cube.hpp
include/glare/shader/: autoprogram.hpp  file_shader_source_loader.hpp  fs_shader_source_loader.hpp  glsl_types.hpp  phong_shading.hpp  program_factory.hpp  shader.hpp  shader_preprocessor.hpp  shader_program.hpp  shader_program_library.hpp  shader_source_loader_interface.hpp  shading_interface.hpp
include/glare/ui/: camera_config.hpp  checkbox.hpp  debug_window.hpp  light_config.hpp  ui_context.hpp
include/glare/ui/widget/: color_temp_picker.hpp
libs/gl_tables/: CMakeLists.txt  formats.cpp  tables.cpp
libs/gl_tables/include/: gl_tables.hpp
libs/gl_tables/src/: formats.cpp
libs/imgui/: CMakeLists.txt
libs/imgui/include/: imconfig.h
libs/simple_ktx/: CMakeLists.txt
libs/simple_ktx/include/: simple_ktx.hpp
libs/simple_ktx/include/simple_ktx/: ktx_image_base_iterator.hpp  ktx_image_reader.hpp  ktx_image_writer.hpp  simple_ktx.hpp
libs/simple_ktx/src/: ktx_image_base_iterator.cpp  ktx_image_reader.cpp  ktx_image_writer.cpp  simple_ktx.cpp
libs/stb_image/: CMakeLists.txt
src/: buildconfig.hpp.in  camera.cpp  fps_camera.cpp  freefly_camera_controller.cpp  hdr_renderer.cpp  skybox.cpp
src/app/: app_context.cpp  app_context.hpp  main.cpp
src/debug/: debug_window.cpp
src/material/: color_utils.cpp  ktx_loader.cpp  texture.cpp  texture_library.cpp  texture_loader.cpp
src/model/: mesh.cpp  model.cpp  model_loader.cpp
src/opengl/: context.cpp  framebuffer.cpp  renderbuffer.cpp  shader.cpp  shader_program.cpp  texture.cpp  vertex_array.cpp
src/platform/linux/: inotify_watcher.cpp
src/primitive/: axis.cpp  unit_cube.cpp
src/shader/: autoprogram.cpp  file_shader_source_loader.cpp  fs_shader_source_loader.cpp  glsl_types.cpp  phong_shading.cpp  program_factory.cpp  shader.cpp  shader_preprocessor.cpp  shader_program.cpp  shader_program_library.cpp
src/ui/: camera_config.cpp  checkbox.cpp  debug_window.cpp  light_config.cpp  ui_context.cpp
src/ui/widget/: color_temp_picker.cpp
tests/: CMakeLists.txt
tests/shader/: shader_preprocessor_test.cpp
tools/ktx_assemble/: CMakeLists.txt  main.cpp
tools/ktx_export/: CMakeLists.txt  main.cpp  options.cpp  options.hpp
tools/ktx_viewer/: CMakeLists.txt
tools/ktx_viewer/src/: main.cpp  mainwindow.cpp  mainwindow.hpp  texture_renderer.cpp  texture_renderer.hpp
tools/ktx_viewer/ui/: mainwindow.ui
